samples/_failures_safe/1761712229_7b668b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_688cb8d9.c: In function ‘main’:
./samples/SAFE/__tmp_688cb8d9.c:143:9: error: expected expression at end of input
  143 |         destroy_matrix(&
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_688cb8d9.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_688cb8d9.c:143:9: error: expected declaration or statement at end of input
